[tool.poetry]
name = "CTkTreeview"
version = "0.1.0"
description = "A Treeview widget for customtkinter (extension/add-on)"
authors = ["JohnDevlopment <50782633+JohnDevlopment@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "CTkTreeview" },
]

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.2.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
